--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "colors": "^1.4.0",
+    "csvtojson": "^2.0.10",
     "currency.js": "^2.0.4",
+    "json2csv": "^5.0.7",
     "nodemon": "^2.0.19",
     "puppeteer": "^15.5.0"
   }
